k8s/temp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
spec:
  replicas: 1
  selector:
    matchLabels:
       app: temp
  template:
    metadata:
      labels:
        app: temp
    spec:
       automountServiceAccountToken: false  # stop interact Kubernetes API
       containers:
       - name: app
         image: ahmed377/apptemp:v1
         ports:
         - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: NodePort
  selector:
    app: temp
  ports:
  - nodePort: 32000
    port: 5000
    targetPort: 5000
