k8s/version-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: version-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
       app: version
  template:
    metadata:
      labels:
        app: version
    spec:
       automountServiceAccountToken: false  # stop interact Kubernetes API
       containers:
       - name: version-con
         image: ahmed377/appversion
         ports:
         - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: version-service
spec:
  type: NodePort
  selector:
    app: version
  ports:
  - nodePort: 30001
    port: 5001
    targetPort: 5001
