k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: app-ingress
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /temperature
        pathType: Prefix
        backend:
         service:
           name: app-service
           port:
             number: 5000
      - path: /version
        pathType: Prefix
        backend:
         service:
           name: version-service
           port:
             number: 5001
      - path: /metrics
        pathType: Prefix
        backend:
         service:
           name: app-service
           port:
             number: 5000
